<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/aqua"
    tools:context="com.akatowolf.calculadora.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/resultado"
        android:id="@+id/cResultado" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:hint="@string/num1"
        android:id="@+id/cNUM1"
        android:textColor="@color/red"
        android:inputType="numberDecimal"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:hint="@string/num2"
            android:inputType="numberDecimal"
            android:id="@+id/cNUM2"
            android:textColor="@color/red"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkblue"
        android:textSize="20dp"
        android:hint="@string/calcular"
        android:id="@+id/cCALCULAR"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/suma"
            android:textColor="@color/blue"
            android:id="@+id/cSUMA"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/resta"
            android:textColor="@color/blue"
            android:id="@+id/cRESTA"/>




            <RadioButton

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/multiplicacion"
                android:textColor="@color/blue"
                android:id="@+id/cMULTIPLICACION"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/division"
                android:textColor="@color/blue"
                android:id="@+id/cDIVISION"/>


    </RadioGroup>
    </LinearLayout>
</LinearLayout>



</LinearLayout>